changed header to say inside-out and added the home buttom

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 <div id="wrapper">
           <header>
     <div class="container clearfix">
-              <h1 id="logo"> Pratik </h1>
-              <nav> <a href="">Lorem</a> <a href="">Ipsum</a> <a href="">Dolor</a> </nav>
+              <h1 id="logo"> inside-out </h1>
+              <nav> <a href="">home</a> <a href="">Ipsum</a> <a href="">Dolor</a> </nav>
             </div>
   </header>
           <!-- /header -->
