added loader to the index.html and dynamically display it once it has been loaded.As soon as the page has completed loading in full we remove the div and allow for page interactions.

--- a/index.html
+++ b/index.html
@@ -121,5 +121,7 @@
   <!-- all javascript used in app that is custom will come from the app.js file --> 
   <script src="assets/js/app.js"></script> 
 </div>
+	<div id="loaderDiv"></div>
+	<script>$("#loaderDiv").fadeIn("slow");</script>
 </body>
 </html>
