added click event functions and listners. added preloader for home page on initial load. updated the links in the menu and logo to call page content from our WordPress API.

--- a/index.html
+++ b/index.html
@@ -6,55 +6,30 @@
 <title>1xx.jd09524 | 1xx</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <link href=”https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css” rel=”stylesheet” integrity=”sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN” crossorigin=”anonymous”>
-
-<!-- styles used for the header and body of the page -->
 <link rel="stylesheet"	href="assets/css/header-resize.css">
-
-<!-- styles used for the footer of the page -->
 <link rel="stylesheet" href="assets/css/style.css">
-<!-- styles used for the footer  of the page -->
-
 <link rel="stylesheet" href="assets/css/footer.css">
 </head>
-
 <body>
 <div id="wrapper">
   <header>
     <div class="container clearfix">
-      <nav> </nav>
-      <h1 id="logo"> inside-out </h1>
-</div>
+      <h1 id="logo" onClick="getPage(99)"> inside-out </h1>
+		<nav> </nav>
+    </div>
   </header>
-  <!-- /header -->
-  
   <div id="main">
     <div id="content">
       <section>
         <div class="container">
-          <h1>white column</h1>
-          <p>panel content</p>
-          <p>panel content</p>
-          <p>panel content</p>
-          <p>panel content</p>
-          <p>panel content</p>
-          <p>panel content</p>
-        </div>
-      </section>
-      <section class="color">
-        <div class="container">
-          <h1>blue column</h1>
-          <p>panel content</p>
-          <p>panel content</p>
-          <p>panel content</p>
-          <p>panel content</p>
-          <p>panel content</p>
-          <p>panel content</p>
-        </div>
+			<div class="circle">
+				<div class="wave">
+				</div>
+				</div>
+			</div>
       </section>
     </div>
   </div>
-  <!-- #main -->
-  
   <footer>
     <div class="container">
       <div class="row">
@@ -88,8 +63,6 @@
       </div>
     </div>
   </footer>
-  <!--footer start from here--> 
-  
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <div class="copyright">
@@ -110,18 +83,12 @@
         </div>
       </div>
     </div>
-    <!-- /footer --> 
   </div>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> 
-  
-  <!-- /#wrapper --> 
-  <!-- js used for the header and body of the page --> 
   <script src="assets/js/header-resize.js"></script> 
-  
-  <!-- all javascript used in app that is custom will come from the app.js file --> 
   <script src="assets/js/app.js"></script> 
 </div>
-	<div id="loaderDiv"></div>
-	<script>$("#loaderDiv").fadeIn("slow");</script>
+<div id="loaderDiv"></div>
+<script>$("#loaderDiv").fadeIn("slow");</script>
 </body>
 </html>
